Remove spacing for desktop because of select box issues with margin

--- a/web/stylesheets/src/FrontendResponsive/components/partials/_property-editor.scss
+++ b/web/stylesheets/src/FrontendResponsive/components/partials/_property-editor.scss
@@ -117,7 +117,6 @@
 			.city,
 			.region,
 			.postal_code {
-				margin-left: 10px;
 				margin-bottom: 5px;
 				display: block;
 			}
